CollectionUtilTest: remove usage of deprecated API
Upon compiling the test code, the message "CollectionUtilTest.java
uses or overrides a deprecated API." is displayed. The new Integer(1)
used is causing this warning to occur.

Deprecated APIs should be removed for code quality purposes.

Let's replace all instances of new Integer(1) with Integer.valueOf(1).